增加代码测试g20416

--- a/src/main/resources/views/index-upms.html
+++ b/src/main/resources/views/index-upms.html
@@ -42,7 +42,7 @@
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
           <li><a href="javascript:;" @click="donate"><i class="fa fa-jpy"></i> &nbsp;捐赠作者</a></li>
-          <li><a href="http://www.renren.io" target="_blank"><i class="fa fa-home"></i> &nbsp;编程教程</a></li>
+          <li><a href="http://www.filecoin.io" target="_blank"><i class="fa fa-home"></i> &nbsp;编程教程</a></li>
 		  <li><a href="javascript:;" @click="updatePassword"><i class="fa fa-lock"></i> &nbsp;修改密码</a></li>
           <li><a href="javascript:;" @click="logout"><i class="fa fa-sign-out"></i> &nbsp;退出系统</a></li>
 		</ul>
@@ -90,7 +90,7 @@
     <div class="pull-right hidden-xs">
       Version 1.2.0
     </div>
-    Copyright &copy; 2017 <a href="http://www.renren.io" target="_blank">renren.io</a> All Rights Reserved
+    Copyright &copy; 2017 <a href="http://www.filecoin.io" target="_blank">filecoin.io</a> All Rights Reserved
   </footer>
 
   <!-- Add the sidebar's background. This div must be placed
