--- a/src/main/resources/views/main.html
+++ b/src/main/resources/views/main.html
@@ -22,10 +22,10 @@
 
         <h3>&nbsp;&nbsp;&nbsp;获取帮助</h3>
         <ul>
-            <li>Git地址：<a href="http://git.oschina.net/babaio/renren-fast" target="_blank">http://git.oschina.net/babaio/renren-fast</a></li>
-            <li>使用手册：<a href="http://www.renren.io/open/renren-fast" target="_blank">http://www.renren.io/open/renren-fast</a></li>
-            <li>代码生成器：<a href="http://git.oschina.net/babaio/renren-generator" target="_blank">http://git.oschina.net/babaio/renren-generator</a></li>
-            <li>其他项目：<a href="http://www.renren.io/open/" target="_blank">http://www.renren.io/open/</a></li>
+            <li>Git地址：<a href="http://git.oschina.net/babaio/filecoin-fast" target="_blank">http://git.oschina.net/babaio/filecoin-fast</a></li>
+            <li>使用手册：<a href="http://www.filecoin.io/open/filecoin-fast" target="_blank">http://www.filecoin.io/open/filecoin-fast</a></li>
+            <li>代码生成器：<a href="http://git.oschina.net/babaio/filecoin-generator" target="_blank">http://git.oschina.net/babaio/filecoin-generator</a></li>
+            <li>其他项目：<a href="http://www.filecoin.io/open/" target="_blank">http://www.filecoin.io/open/</a></li>
             <li>如需关注项目最新动态，请Watch、Star项目，同时也是对项目最好的支持</li>
         </ul>
 
