增加代码测试g20416

--- a/src/main/resources/views/index-upms.html
+++ b/src/main/resources/views/index-upms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>人人快速开发平台</title>
+  <title>filecoin快速开发平台</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -28,9 +28,9 @@
   <header class="main-header">
     <a href="javascript:;" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>人人</b></span>
+      <span class="logo-mini"><b>filecoin</b></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>人人快速开发平台</b></span>
+      <span class="logo-lg"><b>filecoin快速开发平台</b></span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
