--- a/src/main/resources/views/login.html
+++ b/src/main/resources/views/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>人人快速开发平台</title>
+  <title>filecoin快速开发平台</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -24,7 +24,7 @@
 <body class="hold-transition login-page">
 <div class="login-box" id="rrapp" v-cloak>
   <div class="login-logo">
-    <b>人人快速开发平台</b>
+    <b>filecoin快速开发平台</b>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
