--- a/src/main/resources/static/filecoin/assets/fonts/icomoon/ipfsun.css
+++ b/src/main/resources/static/filecoin/assets/fonts/icomoon/ipfsun.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('icomoon.eot?iw3aey');
-  src:  url('icomoon.eot?iw3aey#iefix') format('embedded-opentype'),
-    url('icomoon.ttf?iw3aey') format('truetype'),
-    url('icomoon.woff?iw3aey') format('woff'),
-    url('icomoon.svg?iw3aey#icomoon') format('svg');
+  src:  url('icomoon.eot?nsf01p');
+  src:  url('icomoon.eot?nsf01p#iefix') format('embedded-opentype'),
+    url('icomoon.ttf?nsf01p') format('truetype'),
+    url('icomoon.woff?nsf01p') format('woff'),
+    url('icomoon.svg?nsf01p#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -27,78 +27,105 @@
 .icon-computer:before {
   content: "\e900";
 }
-.icon-Curve:before {
+.icon-coupon:before {
   content: "\e901";
 }
-.icon-Detail:before {
+.icon-Curve:before {
   content: "\e902";
 }
-.icon-dollar:before {
+.icon-daijinquan:before {
   content: "\e903";
 }
-.icon-Earnings:before {
+.icon-Detail:before {
   content: "\e904";
 }
-.icon-fil:before {
+.icon-dollar:before {
   content: "\e905";
 }
-.icon-filalt:before {
+.icon-Earnings:before {
   content: "\e906";
 }
-.icon-group:before {
+.icon-fil:before {
   content: "\e907";
 }
-.icon-Hard_disk:before {
+.icon-filalt:before {
   content: "\e908";
 }
-.icon-hard_storage:before {
+.icon-gift:before {
   content: "\e909";
 }
-.icon-hardisk:before {
+.icon-group:before {
   content: "\e90a";
 }
-.icon-hardnoactive:before {
+.icon-Hard_disk:before {
   content: "\e90b";
 }
-.icon-hardremove:before {
+.icon-hard_storage:before {
   content: "\e90c";
 }
-.icon-hardsettings:before {
+.icon-hardisk:before {
   content: "\e90d";
 }
-.icon-Man:before {
+.icon-hardnoactive:before {
   content: "\e90e";
 }
-.icon-off_line:before {
+.icon-hardremove:before {
   content: "\e90f";
 }
-.icon-offline:before {
+.icon-hardsettings:before {
   content: "\e910";
 }
-.icon-online:before {
+.icon-invite:before {
   content: "\e911";
 }
-.icon-onlinealt:before {
+.icon-invitea:before {
   content: "\e912";
 }
-.icon-os_linux:before {
+.icon-loading_percentage:before {
   content: "\e913";
 }
-.icon-s_remove:before {
+.icon-luck_draw:before {
   content: "\e914";
 }
-.icon-SJCX:before {
+.icon-luck_drawb:before {
   content: "\e915";
 }
-.icon-SJCX-alt:before {
+.icon-Man:before {
   content: "\e916";
 }
-.icon-wifi:before {
+.icon-off_line:before {
   content: "\e917";
 }
-.icon-windows:before {
+.icon-offline:before {
   content: "\e918";
 }
-.icon-worker:before {
+.icon-online:before {
   content: "\e919";
+}
+.icon-onlinealt:before {
+  content: "\e91a";
+}
+.icon-os_linux:before {
+  content: "\e91b";
+}
+.icon-s_remove:before {
+  content: "\e91c";
+}
+.icon-SJCX:before {
+  content: "\e91d";
+}
+.icon-SJCX-alt:before {
+  content: "\e91e";
+}
+.icon-tickets:before {
+  content: "\e91f";
+}
+.icon-wifi:before {
+  content: "\e920";
+}
+.icon-windows:before {
+  content: "\e921";
+}
+.icon-worker:before {
+  content: "\e922";
 }
