--- a/src/main/resources/templates/sys/index-dashboard.html
+++ b/src/main/resources/templates/sys/index-dashboard.html
@@ -108,7 +108,7 @@
                 <ul class="info-menu right-links list-inline list-unstyled">
                     <li class="profile">
                         <a href="#" data-toggle="dropdown" class="toggle">
-                           <span id="userNameo">richie963 <i class="fa fa-angle-down"></i></span>
+                           <span id="userNameo"> <i class="fa fa-angle-down"></i></span>
                         </a>
                         <ul class="dropdown-menu profile animated fadeIn">
                             <li>
@@ -144,85 +144,7 @@
         <div class="page-sidebar fixedscroll">
 
             <!-- MAIN MENU - START -->
-            <div class="page-sidebar-wrapper" id="main-menu-wrapper">
-
-
-                <ul class='wraplist'>
-                    <li class='menusection'>菜 单</li>
-                    <li class="open">
-                        <a href="index-dashboard.html">
-                            <i class="fa fa-th-large"></i>
-                            <span class="title">用户面板</span>
-                        </a>
-                    </li>
-                    <li class="">
-                        <a href="index-trading-view.html">
-                            <i class="fa fa-bullseye"></i>
-                            <span class="title">矿工管理</span>
-                        </a>
-                    </li>
-                    <li class="">
-                        <a href="index-marketcap.html">
-                            <i class="fa fa-flash"></i>
-                            <span class="title">付款记录</span>
-                        </a>
-                    </li>
-                    <li class="">
-                        <a href="my-wallet.html">
-                            <i class="img"><img th:src="@{/filecoin/data/icons/wallet-o.png}" style="width:16px" alt=""></i>
-                            <span class="title">付款设置</span>
-                        </a>
-                    </li>
-                    <li class="">
-                        <a href="security.html">
-                            <i class="fa fa-lock"></i>
-                            <span class="title">安全设置</span>
-                        </a>
-                    </li>
-
-                    <li class="">
-                        <a href="javascript:;">
-                            <i class="fa fa-gear"></i>
-                            <span class="title">个人中心</span>
-                            <span class="arrow "></span>
-                        </a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a class="" href="settings.html">General Settings</a>
-                            </li>
-                            <li>
-                                <a class="" href="account-confirmation.html">Account Confirmation</a>
-                            </li>
-                        </ul>
-                    </li>
-                    
-                    <li class="">
-                        <a href="javascript:;">
-                            <i class="fa fa-question-circle"></i>
-                            <span class="title">帮助中心</span>
-                            <span class="arrow "></span>
-                        </a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a class="" href="ui-faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a class="" href="ui-support.html">Help center</a>
-                            </li>
-
-                        </ul>
-                        
-                        <li class="">
-                        <a href="highway.html">
-                            <i class="fa fa-comments"></i>
-                            <span class="title">推广有礼</span>
-                        </a>
-                        
-                    </li>
-                    </li>
-                </ul>
-
-            </div>
+            <div class="page-sidebar-wrapper" id="main-menu-wrapper" th:include="/common/menu :: commonMenu('index-dashboard')"></div>
             <!-- MAIN MENU - END -->
 
         </div>
@@ -525,19 +447,7 @@
     <script th:inline="javascript">
 
         $(function(){
-            var path = ctx + "/sys/user/info";
-            var ajax = new AJAXPacket(path, "正在执行...请稍后");
-            Core.sendPacket(ajax, function (packet) {
-                var resultCode = packet.code;
-                var message = packet.msg;
-                var data = packet.data;
-                if (resultCode == "0") {
-                    var userObj = packet.user;
-//                var user = $.parseJSON(userObj);
-                    alert("当前登录用户是：------"+userObj.username);
-                    $("#userNameo").html(userObj.username);
-                }
-            }, true,false);
+            LoginFunc.getLoginUser();
         });
 
     </script>
