将增加付款设置页面

--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -17,7 +17,7 @@
             </a>
         </li>
         <li th:class="${activeClass eq 'marketcap'}? 'open':''">
-            <a href="index-marketcap.html">
+            <a th:href="@{/sys/gopay}">
                 <i class="fa fa-flash"></i>
                 <span class="title">付款记录</span>
             </a>
