将付款设置、安全设置、个人中心、帮助中心及推广有礼变为thymeleaf模板

--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -40,6 +40,7 @@
     <script th:src="@{/filecoin/assets/plugins/morris-chart/js/raphael-min.js}"></script>
     <script th:src="@{/filecoin/assets/plugins/morris-chart/js/morris.min.js}"></script>
     <script th:src="@{/filecoin/assets/js/chart-morris.js}"></script>
+    <script th:src="@{/filecoin/assets/plugins/icheck/icheck.min.js}"></script>
     <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
     <!-- CORE TEMPLATE JS - START -->
