--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -38,6 +38,8 @@
     <!-- CORE CSS FRAMEWORK - END -->
 
     <!-- HEADER SCRIPTS INCLUDED ON THIS PAGE - START -->
+    <link th:href="@{/filecoin/assets/plugins/icheck/skins/all.css}" rel="stylesheet" type="text/css" media="screen">
+    <!-- HEADER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
     <link th:href="@{/filecoin/assets/plugins/jvectormap/jquery-jvectormap-2.0.1.css}" rel="stylesheet" type="text/css" media="screen" />
     <link th:href="@{/filecoin/assets/plugins/morris-chart/css/morris.css}" rel="stylesheet" type="text/css" media="screen" />
