--- a/src/main/resources/templates/sys/pay.html
+++ b/src/main/resources/templates/sys/pay.html
@@ -144,7 +144,7 @@
         <div class="page-sidebar fixedscroll">
 
             <!-- MAIN MENU - START -->
-            <div class="page-sidebar-wrapper" id="main-menu-wrapper" th:include="/common/menu :: commonMenu('marketcap')"></div>
+            <div class="page-sidebar-wrapper" id="main-menu-wrapper" th:include="/common/menu :: commonMenu('pay')"></div>
             <!-- MAIN MENU - END -->
 
         </div>
