--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -16,64 +16,46 @@
                 <span class="title">矿工管理</span>
             </a>
         </li>
-        <li th:class="${activeClass eq 'marketcap'}? 'open':''">
+        <li th:class="${activeClass eq 'pay'}? 'open':''">
             <a th:href="@{/sys/gopay}">
                 <i class="fa fa-flash"></i>
                 <span class="title">付款记录</span>
             </a>
         </li>
-        <li th:class="${activeClass eq 'wallet'}? 'open':''">
-            <a href="my-wallet.html">
+        <li th:class="${activeClass eq 'mywallet'}? 'open':''">
+            <a th:href="@{/sys/gomywallet}">
                 <i class="img"><img th:src="@{/filecoin/data/icons/wallet-o.png}" style="width:16px" alt=""></i>
                 <span class="title">付款设置</span>
             </a>
         </li>
         <li th:class="${activeClass eq 'security'}? 'open':''">
-            <a href="security.html">
+            <a th:href="@{/sys/gosecurity}">
                 <i class="fa fa-lock"></i>
                 <span class="title">安全设置</span>
             </a>
         </li>
 
-        <li th:class="${activeClass eq 'account-confirmation'}? 'open':''">
-            <a href="javascript:;">
+        <li th:class="${activeClass eq 'settings'}? 'open':''">
+            <a th:href="@{/sys/gosettings}">
                 <i class="fa fa-gear"></i>
                 <span class="title">个人中心</span>
-                <span class="arrow "></span>
             </a>
-            <ul class="sub-menu">
-                <li>
-                    <a class="" href="settings.html">General Settings</a>
-                </li>
-                <li>
-                    <a class="" href="account-confirmation.html">Account Confirmation</a>
-                </li>
-            </ul>
+
         </li>
 
         <li th:class="${activeClass eq 'faq'}? 'open':''">
-            <a href="javascript:;">
+            <a th:href="@{/sys/gofaq}">
                 <i class="fa fa-question-circle"></i>
                 <span class="title">帮助中心</span>
-                <span class="arrow "></span>
             </a>
-            <ul class="sub-menu">
-                <li>
-                    <a class="" href="ui-faq.html">FAQ</a>
-                </li>
-                <li>
-                    <a class="" href="ui-support.html">Help center</a>
-                </li>
-
-            </ul>
+        </li>
 
         <li th:class="${activeClass eq 'highway'}? 'open':''">
-            <a href="highway.html">
+            <a th:href="@{/sys/gohighway}">
                 <i class="fa fa-comments"></i>
                 <span class="title">推广有礼</span>
             </a>
 
-        </li>
         </li>
     </ul>
 
