将top头部部分代码整理出common thymeleaf模板

--- a/src/main/resources/templates/sys/miner.html
+++ b/src/main/resources/templates/sys/miner.html
@@ -8,133 +8,7 @@
 
 <body class=" ">
     <!-- START TOPBAR -->
-    <div class='page-topbar '>
-        <div class='logo-area'>
-
-        </div>
-        <div class='quick-area'>
-            <div class='pull-left'>
-                <ul class="info-menu left-links list-inline list-unstyled">
-                    
-                    
-                    <li class="notify-toggle-wrapper">
-                        <a href="#" data-toggle="dropdown" class="toggle">
-                            <i class="fa fa-bell"></i>
-                            <span class="badge badge-accent">3</span>
-                        </a>
-                        <ul class="dropdown-menu notifications animated fadeIn">
-                            <li class="total">
-                                <span class="small">
-                                您有 <strong>3</strong> 条新消息.
-                                <a href="javascript:;" class="pull-right">全部标记为已读消息</a>
-                            </span>
-                            </li>
-                            <li class="list">
-
-                                <ul class="dropdown-menu-list list-unstyled ps-scrollbar">
-                                    <li class="unread available">
-                                        <!-- available: success, warning, info, error -->
-                                        <a href="javascript:;">
-                                            <div class="notice-icon">
-                                                <i class="fa fa-check"></i>
-                                            </div>
-                                            <div>
-                                                <span class="name">
-                                                    <strong>您已成功邀请一位好友注册。</strong>
-                                                    <span class="time small">15分钟前</span>
-                                                </span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li class="unread away">
-                                        <!-- available: success, warning, info, error -->
-                                        <a href="javascript:;">
-                                            <div class="notice-icon">
-                                                <i class="fa fa-clock-o"></i>
-                                            </div>
-                                            <div>
-                                                <span class="name">
-                                                    <strong>您有一台矿机连接近期不稳定!</strong>
-                                                    <span class="time small">45分钟前</span>
-                                                </span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li class=" busy">
-                                        <!-- available: success, warning, info, error -->
-                                        <a href="javascript:;">
-                                            <div class="notice-icon">
-                                                <i class="fa fa-times"></i>
-                                            </div>
-                                            <div>
-                                                <span class="name">
-                                                    <strong>您有一台矿机离线，请注意！</strong>
-                                                    <span class="time small">1小时前</span>
-                                                </span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                   
-                                    <li class=" available">
-                                        <!-- available: success, warning, info, error -->
-                                        <a href="javascript:;">
-                                            <div class="notice-icon">
-                                                <i class="fa fa-check"></i>
-                                            </div>
-                                            <div>
-                                                <span class="name">
-                                                    <strong>2018-9-16 收益已支付，请注意查收。</strong>
-                                                    <span class="time small">2018-09-16</span>
-                                                </span>
-                                            </div>
-                                        </a>
-                                    </li>
-
-                                </ul>
-
-                            </li>
-
-                            <li class="external">
-                                <a href="javascript:;">
-                                    <span>阅读所有消息。</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    
-                </ul>
-            </div>
-            <div class='pull-right'>
-                <ul class="info-menu right-links list-inline list-unstyled">
-                    <li class="profile">
-                        <a href="#" data-toggle="dropdown" class="toggle">
-                            <span id="userNameo"> <i class="fa fa-angle-down"></i></span>
-                        </a>
-                        <ul class="dropdown-menu profile animated fadeIn">
-                            <li>
-                                <a href="account-confirmation.html">
-                                    <i class="fa fa-wrench"></i> 账户设置
-                                </a>
-                            </li>
-                            
-                            <li>
-                                <a href="ui-support.html">
-                                    <i class="fa fa-info"></i> 用户帮助
-                                </a>
-                            </li>
-                            <li class="last">
-                                <a href="ui-login.html">
-                                    <i class="fa fa-lock"></i> 退出
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    
-                </ul>
-            </div>
-        </div>
-
-    </div>
+    <div class='page-topbar ' th:include="/common/top :: commonTop"></div>
     <!-- END TOPBAR -->
     <!-- START CONTAINER -->
     <div class="page-container row-fluid container-fluid">
