增加激活验证跳转,判断当前用户状态

--- a/src/main/resources/templates/sys/regist-result.html
+++ b/src/main/resources/templates/sys/regist-result.html
@@ -13,11 +13,20 @@
             var jsonResult = [[${jsonResult}]];
             //document.ready 方法
             $(function () {
-                Core.alert("注册成功!,准备跳转首页！", 1,false, function () {
-                    localStorage.removeItem("token");
-                    localStorage.setItem("token",jsonResult.token);
-                    window.location.href = ctx+"/sys/gomasterindex";
-                });
+                var code = jsonResult.code;
+                var msg = jsonResult.msg;
+                if(code == 0){
+                    Core.alert("注册成功!,准备跳转首页！", 1,false, function () {
+                        localStorage.removeItem("token");
+                        localStorage.setItem("token",jsonResult.token);
+                        window.location.href = ctx+"/sys/gomasterindex";
+                    });
+                }else{
+                    Core.alert(msg, 2,false, function () {
+                        window.location.href = ctx+"/sys/goindex";
+                    });
+                }
+
             });
         </script>
     </body>
