修改所有data包下图片加载不上的问题

--- a/src/main/resources/templates/sys/faq.html
+++ b/src/main/resources/templates/sys/faq.html
@@ -70,7 +70,7 @@
                                     <div class="col-lg-4 no-pl no-pr">
                                         <div class="tile-progress bg-accent" style="margin-left:15px;margin-right:15px;cursor:pointer">
                                             <div class="content">
-                                                <img src="../data/icons/i1.png" class="center-block mb-20" style="max-width:84px" alt="">
+                                                <img th:src="@{/filecoin/data/icons/i1.png}" class="center-block mb-20" style="max-width:84px" alt="">
                                                 <h4>QQ群</h4>
                                                 <p class="mt-10 text-center no-mb">一群：22138062</p>
                                                 <p class="mt-10 text-center no-mb">一群：22138088</p>
@@ -81,7 +81,7 @@
                                     <div class="col-lg-4 no-pl no-pr">
                                         <div class="tile-progress bg-accent" style="margin-left:15px;margin-right:15px;cursor:pointer">
                                             <div class="content">
-                                                <img src="../data/icons/i3.png" class="center-block mb-20" style="max-width:150px" alt="">
+                                                <img th:src="@{/filecoin/data/icons/i3.png}" class="center-block mb-20" style="max-width:150px" alt="">
                                                 <h4>微信在线客服</h4>
                                           </div>
                                         </div>
@@ -90,7 +90,7 @@
                                     <div class="col-lg-4 no-pl no-pr">
                                         <div class="tile-progress bg-accent" style="margin-left:15px;margin-right:15px;cursor:pointer">
                                             <div class="content">
-                                                <img src="../data/icons/i3.png" class="center-block mb-20" style="max-width:150px" alt="">
+                                                <img th:src="@{/filecoin/data/icons/i3.png}" class="center-block mb-20" style="max-width:150px" alt="">
                                                 <h4>微信公众号</h4>
                                                 
                                             </div>
