--- a/src/main/resources/templates/sys/highway.html
+++ b/src/main/resources/templates/sys/highway.html
@@ -250,7 +250,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-8">
-                                        <img src="../data/dashelements/affiliate-img.png" alt="" width="835" height="418" class="aff-img img-responsive">
+                                        <img th:src="@{/filecoin/data/dashelements/affiliate-img.png}" alt="" width="835" height="418" class="aff-img img-responsive">
                                     </div>
                                    
                                 </div>
@@ -285,7 +285,7 @@
                                     <div class="col-lg-3 col-md-6 mt-30">
                                         <div class="reward-box">
                                             
-                                            <img src="../data/icons/level1.png" class="center-block mt-20" style="max-width:120px" alt="">
+                                            <img th:src="@{/filecoin/data/icons/level1.png}" class="center-block mt-20" style="max-width:120px" alt="">
                                             <h4 class="bold text-center mt-20">一等奖2名<br /><br />
                                             价值2600元星际云star一台。</h4>
                                             <hr>
@@ -296,7 +296,7 @@
                                     <div class="col-lg-3 col-md-6 mt-30">
                                         <div class="reward-box">
                                             
-                                            <img src="../data/icons/level2.png" class="next center-block mt-20" alt="">
+                                            <img th:src="@{/filecoin/data/icons/level2.png}" class="next center-block mt-20" alt="">
                                              <h4 class="bold text-center mt-20">一等奖3名<br /><br />
                                              FIL 虚拟币 10个</h4>
                                             <hr>
@@ -307,7 +307,7 @@
                                     <div class="col-lg-3 col-md-6 mt-30">
                                         <div class="reward-box">
                                             
-                                            <img src="../data/icons/level3.png" class="next center-block mt-20" alt="">
+                                            <img th:src="@{/filecoin/data/icons/level3.png}" class="next center-block mt-20" alt="">
                                             <h4 class="bold text-center mt-20">一等奖5名<br /><br />
                                             FIL 虚拟币 5个</h4>
                                             <hr>
@@ -318,7 +318,7 @@
                                     <div class="col-lg-3 col-md-6 mt-30">
                                         <div class="reward-box">
                                             
-                                            <img src="../data/icons/level4.png" class="next center-block mt-20" alt="">
+                                            <img th:src="@{/filecoin/data/icons/level4.png}" class="next center-block mt-20" alt="">
                                              <h4 class="bold text-center mt-20">一等奖10名<br /><br />
                                              FIL 虚拟币 1个。</h4>
                                             <hr>
@@ -351,7 +351,7 @@
                                         <div class="text-center no-mt no-mb">
                                             <div class="img-affa-wrapper no-mb" style="padding: 20px">
                                                <div class="">
-                                                   <img src="../data/payment-gateways/nas.jpg" alt="payment-gateway">
+                                                   <img th:src="@{/filecoin/data/payment-gateways/nas.jpg}" alt="payment-gateway">
                                                </div>
                                             </div> 
                                             <div class="col-xs-12 no-pl no-pr">
@@ -393,7 +393,7 @@
                                         <div class="text-center no-mt no-mb">
                                             <div class="img-affa-wrapper no-mb" style="padding: 20px">
                                                <div class="">
-                                                   <img src="../data/payment-gateways/sun.jpg" alt="payment-gateway">
+                                                   <img th:src="@{/filecoin/data/payment-gateways/sun.jpg}" alt="payment-gateway">
                                                </div>
                                             </div> 
                                             <div class="col-xs-12 no-pl no-pr">
@@ -436,7 +436,7 @@
                                         <div class="text-center no-mt no-mb">
                                             <div class="img-affa-wrapper no-mb" style="padding: 20px">
                                                <div class="">
-                                                   <img src="../data/payment-gateways/moon.jpg" alt="payment-gateway">
+                                                   <img th:src="@{/filecoin/data/payment-gateways/moon.jpg}" alt="payment-gateway">
                                                </div>
                                             </div> 
                                             <div class="col-xs-12 no-pl no-pr">
