--- a/src/main/resources/templates/sys/security.html
+++ b/src/main/resources/templates/sys/security.html
@@ -67,7 +67,7 @@
                                         <div class="tab-content">
                                             <div class="tab-pane fade in active" id="home-1">
 <div class="security-option-wrapper">
-                                                            <img src="../data/icons/email-verification.png" class="tab-img-icon" alt="icon">
+                                                            <img th:src="@{/filecoin/data/icons/email-verification.png}" class="tab-img-icon" alt="icon">
                                                             <div class="tab-head">
                                                                 <h4 class="bold mb-5">邮箱认证</h4>
                                                                 <h4 class="no-mt"><small>您认证的邮箱地址：79604722@qq.com 已通过认证！</small></h4>
@@ -78,7 +78,7 @@
                                                         
                                                         
                                                        <div class="security-option-wrapper">
-                                                            <img src="../data/icons/phone-verification.png" class="tab-img-icon" alt="icon">
+                                                            <img th:src="@{/filecoin/data/icons/phone-verification.png}" class="tab-img-icon" alt="icon">
                                                             <div class="tab-head">
                                                               <h4 class="bold mb-5">手机身份认证</h4>
                                                                 <h4 class="no-mt"><small>您认证的手机号码为：13351212072 已通过认证！</small></h4>
@@ -89,10 +89,10 @@
                                                        
                                                         
 <div class="security-option-wrapper">
-                                                            <img src="../data/icons/backup.png" class="tab-img-icon" alt="icon">
+                                                            <img th:src="@{/filecoin/data/icons/backup.png}" class="tab-img-icon" alt="icon">
                                                             <div class="tab-head">
                                                                 <h4 class="bold mb-5">谷歌身份验证器</h4>
-                                                                <h4 class="no-mt"><small>请使用您手机上的谷歌身份验证器 APP 进行设置</h4>
+                                                                <h4 class="no-mt"><small>请使用您手机上的谷歌身份验证器 APP 进行设置</small></h4>
 
                                                                 <a href="#" class="btn btn-primary btn-corner right15"><i class="fa fa-cloud-download complete color-white"></i>尚未开放</a>
                                                             </div>
